# robin

./: .dockerignore  .gitignore  Makefile  README  docker-compose.yml  tree
apis/: Dockerfile  Makefile  main.py  pyproject.toml  seed.py
apis/apis/resolvers/: product.py
apis/apis/schemas/: product.py
apis/domains/: product.py
apis/exposers/resolvers/: product.py
apis/exposers/schemas/: product.py
apis/interfaces/repositories/: product.py  product_repository.py
apis/services/db/: memory.py
apis/services/embeddings/: labse_embedder.py  similarity.py
apis/services/i18n/: translation.py
apis/usecases/i18n/: resolve.py
apis/usecases/product/: create.py  list.py  search.py
docs/: req.http
docs/seeds/: products.json
