[tool.poetry]
name = "product-api"
version = "0.1.0"
description = "Multilingual product API with FastAPI + Strawberry"
authors = ["Toi <toi@exemple.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
strawberry-graphql = "^0.222.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0"
pydantic = "^2.6"
mysqlclient = "^2.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
